--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "build":"npm install"
+    "build": "npm install"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
     "express": "^4.21.2",
     "mysql2": "^3.14.0",
     "nodemon": "^3.1.9",
+    "sequelize": "^6.37.7",
     "twilio": "^5.5.1"
   }
 }
